--- a/index.html
+++ b/index.html
@@ -5,212 +5,124 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanaka Shumba | Cybersecurity Portfolio</title>
 <style>
-  /* Reset */
-  * {margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
-  
-  body {
-    background: #000;
-    color: #fff;
-    line-height: 1.6;
-    overflow-x: hidden;
-  }
-
-  /* Animated neon background */
-  body::before {
-    content: "";
-    position: fixed;
-    top:0; left:0; width:100%; height:100%;
-    background: linear-gradient(90deg, rgba(0,255,0,0.05), rgba(0,0,255,0.05));
-    z-index:-1;
-    animation: bgMove 10s linear infinite;
-  }
-
-  @keyframes bgMove {
-    0%{background-position:0 0;}
-    100%{background-position:100% 100%;}
-  }
-
-  header {
-    text-align:center;
-    padding:60px 20px;
-    border-bottom: 2px solid #0f0;
-  }
-
-  header h1 {
-    color:#0f0;
-    font-size:3rem;
-    margin-bottom:10px;
-  }
-
-  header p {
-    font-size:1.2rem;
-    color:#0f0;
-  }
-
-  section {
-    max-width:1000px;
-    margin:50px auto;
-    padding:0 20px;
-  }
-
-  /* About Me */
-  #about {
-    display:flex;
-    flex-wrap:wrap;
-    align-items:center;
-    gap:20px;
-    justify-content:center;
-  }
-
-  #about img {
-    width:200px;
-    height:200px;
-    border-radius:50%;
-    border:3px solid #0f0;
-  }
-
-  #about-text {
-    max-width:600px;
-  }
-
-  #about-text h2 {
-    color:#0f0;
-    margin-bottom:10px;
-  }
-
-  /* Projects */
-  #projects h2, #contact h2 {color:#0f0; margin-bottom:20px; text-align:center;}
-  .project-grid {
-    display:grid;
-    grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
-    gap:20px;
-  }
-
-  .project-card {
-    background:#111;
-    border:2px solid #0f0;
-    padding:20px;
-    border-radius:10px;
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
-
-  .project-card:hover {
-    transform: translateY(-5px);
-    box-shadow:0 0 20px #0f0;
-  }
-
-  .project-card h3 {
-    color:#0f0;
-    margin-bottom:10px;
-  }
-
-  .project-card p {
-    font-size:0.9rem;
-    color:#ccc;
-  }
-
-  /* Contact */
-  #contact form {
-    display:flex;
-    flex-direction:column;
-    max-width:400px;
-    margin:auto;
-    gap:10px;
-  }
-
-  #contact input, #contact textarea, #contact button {
-    padding:10px;
-    border:none;
-    border-radius:5px;
-    outline:none;
-  }
-
-  #contact input, #contact textarea {
-    background:#222;
-    color:#fff;
-  }
-
-  #contact button {
-    background:#0f0;
-    color:#000;
-    font-weight:bold;
-    cursor:pointer;
-    transition: background 0.3s;
-  }
-
-  #contact button:hover {background:#0c0;}
-  
-  footer {
-    text-align:center;
-    margin:50px 0;
-    color:#0f0;
-    font-size:0.8rem;
-  }
-
+    /* Basic Reset */
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #0d0d0d; color: #e0e0e0; line-height: 1.6; }
+    a { color: #00ff99; text-decoration: none; }
+    header { background: #010101; padding: 2rem 1rem; text-align: center; border-bottom: 2px solid #00ff99; }
+    header h1 { font-size: 2.5rem; color: #00ff99; }
+    nav { display: flex; justify-content: center; gap: 2rem; margin-top: 1rem; }
+    nav a { color: #00ff99; font-weight: bold; }
+    section { padding: 4rem 2rem; max-width: 1000px; margin: auto; }
+    h2 { color: #00ff99; margin-bottom: 1rem; border-bottom: 2px solid #00ff99; display: inline-block; padding-bottom: 0.3rem; }
+    .about { display: flex; flex-wrap: wrap; align-items: center; gap: 2rem; }
+    .about img { max-width: 250px; border-radius: 50%; border: 2px solid #00ff99; }
+    .projects-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; margin-top: 2rem; }
+    .project { background: #111; border: 2px solid #00ff99; padding: 1.5rem; border-radius: 10px; transition: transform 0.3s, box-shadow 0.3s; }
+    .project:hover { transform: translateY(-5px); box-shadow: 0 0 15px #00ff99; }
+    .project h3 { color: #00ff99; margin-bottom: 0.5rem; }
+    .project p { font-size: 0.95rem; color: #ccc; }
+    .contact form { display: flex; flex-direction: column; gap: 1rem; max-width: 500px; margin-top: 2rem; }
+    .contact input, .contact textarea { padding: 0.8rem; border-radius: 5px; border: none; font-size: 1rem; }
+    .contact button { padding: 0.8rem; background: #00ff99; color: #010101; font-weight: bold; border: none; border-radius: 5px; cursor: pointer; transition: background 0.3s; }
+    .contact button:hover { background: #00cc77; }
+    footer { text-align: center; padding: 2rem 1rem; border-top: 2px solid #00ff99; margin-top: 2rem; font-size: 0.9rem; }
+    /* Background effect */
+    body::before {
+        content: "";
+        position: fixed;
+        top:0; left:0; width:100%; height:100%;
+        background: repeating-linear-gradient(
+            45deg,
+            rgba(0,255,153,0.05),
+            rgba(0,255,153,0.05) 1px,
+            transparent 1px,
+            transparent 10px
+        );
+        z-index:-1;
+    }
 </style>
 </head>
 <body>
-
 <header>
-  <h1>Tanaka Shumba</h1>
-  <p>Cybersecurity Professional | Network & Security Enthusiast</p>
+    <h1>Tanaka Shumba</h1>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
 </header>
 
 <section id="about">
-  <img src="images/about-me.jpg" alt="Tanaka Shumba">
-  <div id="about-text">
     <h2>About Me</h2>
-    <p>Detail-oriented cybersecurity professional with hands-on experience in threat detection, penetration testing, and network security. Proficient in Python, security tools like Wireshark, Zeek, Snort, and Nmap. Passionate about safeguarding digital assets and building secure systems. Seeking to contribute to a forward-thinking cybersecurity team.</p>
-  </div>
+    <div class="about">
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <p>Hello! I'm Tanaka Shumba, a dedicated Cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity. My passion lies in protecting systems, analyzing threats, and building secure applications. I specialize in Python, ethical hacking, penetration testing, network security, and SIEM analysis. I aim to contribute to a security team that values proactive defense and innovation.</p>
+    </div>
 </section>
 
 <section id="projects">
-  <h2>Projects</h2>
-  <div class="project-grid">
-    <div class="project-card">
-      <h3>Malware Analyzer</h3>
-      <p>Python script simulating malware analysis in a controlled environment to detect potential malicious behaviors.</p>
+    <h2>Projects</h2>
+    <div class="projects-grid">
+        <div class="project">
+            <h3>Malware Analyzer</h3>
+            <p>Python script simulating analysis of suspicious files and detecting potential malicious behaviors safely.</p>
+        </div>
+        <div class="project">
+            <h3>Ethical Hacking Simulator</h3>
+            <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+        </div>
+        <div class="project">
+            <h3>Cloud Security Checker</h3>
+            <p>Python script for simulating checks on cloud service configurations for common misconfigurations.</p>
+        </div>
+        <div class="project">
+            <h3>Basic Pen Test</h3>
+            <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+        </div>
+        <div class="project">
+            <h3>Simple IDS</h3>
+            <p>Basic IDS/IPS simulation in Python demonstrating threat detection mechanisms.</p>
+        </div>
+        <div class="project">
+            <h3>Cybersecurity Lab Series</h3>
+            <p>Collection of Python exercises and labs for hands-on cybersecurity learning.</p>
+        </div>
+        <div class="project">
+            <h3>Secure Hospital System</h3>
+            <p>Python-based secure hospital management system with focus on data privacy and user access control.</p>
+        </div>
+        <div class="project">
+            <h3>VoIP Traffic Analyzer</h3>
+            <p>Captures and analyzes VoIP RTP packets on a local network safely for educational purposes.</p>
+        </div>
+        <div class="project">
+            <h3>Python Network Scanner</h3>
+            <p>Python tool for scanning networks and identifying devices for security auditing purposes.</p>
+        </div>
+        <div class="project">
+            <h3>Healthcare System (Flask)</h3>
+            <p>Simple healthcare management system built with Flask, managing appointments, doctors, and payments.</p>
+        </div>
     </div>
-    <div class="project-card">
-      <h3>Ethical Hacking Simulator</h3>
-      <p>Python scripts demonstrating ethical hacking techniques for educational purposes.</p>
-    </div>
-    <div class="project-card">
-      <h3>Cloud Security Checker</h3>
-      <p>Python tool simulating checks for common cloud misconfigurations and vulnerabilities.</p>
-    </div>
-    <div class="project-card">
-      <h3>Secure Hospital System</h3>
-      <p>Python-based system for managing hospital data securely, with role-based access controls.</p>
-    </div>
-    <div class="project-card">
-      <h3>VOIP Traffic Analyzer</h3>
-      <p>Captures and analyzes VoIP RTP packets safely for educational and security insights.</p>
-    </div>
-    <div class="project-card">
-      <h3>Python Network Scanner</h3>
-      <p>Custom network scanning scripts to detect hosts, open ports, and potential vulnerabilities.</p>
-    </div>
-    <div class="project-card">
-      <h3>Healthcare System (Flask)</h3>
-      <p>Flask-based healthcare management application for handling appointments, doctors, and payments.</p>
-    </div>
-  </div>
 </section>
 
 <section id="contact">
-  <h2>Contact</h2>
-  <form action="#" method="post">
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Your Email" required>
-    <textarea placeholder="Your Message" rows="5" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
+    <h2>Contact</h2>
+    <div class="contact">
+        <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">www.linkedin.com/in/tanakashumba-</a></p>
+        <p>GitHub: <a href="https://github.com/TanakaShumba" target="_blank">github.com/TanakaShumba</a></p>
+    </div>
 </section>
 
 <footer>
-  &copy; 2025 Tanaka Shumba | <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank" style="color:#0f0;">LinkedIn</a> | <a href="https://github.com/TanakaShumba" target="_blank" style="color:#0f0;">GitHub</a>
+    &copy; 2025 Tanaka Shumba. All rights reserved.
 </footer>
-
 </body>
 </html>
